COMP: Fix build against ITK configured to use a custom namespace
This commit introduces the header "sitkNamespace.h" and ensures "itk"
keyword is consistently redefined as the custom namespace.

--- a/Code/Common/CMakeLists.txt
+++ b/Code/Common/CMakeLists.txt
@@ -19,6 +19,11 @@ install(FILES "${CMAKE_CURRENT_BINARY_DIR}/include/sitkConfigure.h"
   DESTINATION "${SimpleITK_INSTALL_INCLUDE_DIR}"
   COMPONENT Development)
 
+configure_file( "src/sitkNamespace.h.in" "include/sitkNamespace.h" )
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/include/sitkNamespace.h"
+  DESTINATION "${SimpleITK_INSTALL_INCLUDE_DIR}"
+  COMPONENT Development)
+
 configure_file("src/sitkVersionConfig.h.in" "include/sitkVersionConfig.h" @ONLY)
 install(FILES "${CMAKE_CURRENT_BINARY_DIR}/include/sitkVersionConfig.h"
   DESTINATION "${SimpleITK_INSTALL_INCLUDE_DIR}"
